// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders edX logo correctly 1`] = `
<header
  className="container"
>
  <nav
    className="navbar px-0 justify-content-between"
  >
    <div>
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="edX logo"
          onError={[Function]}
          src="test-file-stub"
        />
      </a>
      <span
        className="badge badge-secondary beta"
      >
        Beta
      </span>
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders enterprise logo correctly 1`] = `
<header
  className="container"
>
  <nav
    className="navbar px-0 justify-content-between"
  >
    <div>
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Test Enterprise logo"
          onError={[Function]}
          src="https://test.url/image/1.png"
        />
      </a>
      <span
        className="badge badge-secondary beta"
      >
        Beta
      </span>
    </div>
    <div
      className="dropdown"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        className="btn dropdown-toggle btn-light"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        test@example.com
      </button>
      <div
        aria-hidden={true}
        aria-label="test@example.com"
        className="dropdown-menu"
        role="menu"
      >
        <a
          className="dropdown-item"
          href="/logout"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Logout
        </a>
      </div>
    </div>
  </nav>
</header>
`;
